--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,5 @@
 body{
-  background-color: white;
+  background-color: #F2F2F2;
   max-width: 298px;
   width: 100%;
   height: 3866px;
@@ -97,4 +97,107 @@ li a{
 }
 .up-butt:active{
  opacity: 0.4;
+}
+/* header section */
+.contenaier{
+  display: flex;
+  width: 1126px;
+  height: 496px;
+  margin-top: 149px;
+  margin-left: 173px;
+  margin-right: 137px;
+}
+
+.left-sec-header{
+  width: 518px;
+  height: 331px;
+  margin-left: 137px;
+  margin-top: 232px;
+  margin-bottom: 82px;
+}
+.h1{
+  font-family: 'Poppins', sans-serif;
+  font-size: 44px;
+  font-weight: bold;
+  letter-spacing: 0px;
+  line-height: 54px;
+  color: #2F281E;
+}
+.info-header{
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: normal;
+  letter-spacing: 0px;
+  line-height: 28px;
+  color: #544837;
+  margin-top: 30px;
+  width: 458px;
+  height: 95px;
+  padding-bottom: 45px;
+  padding-right: 63px;
+}
+.text-get-butt{
+  color: #FFFFFF;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 0px;
+  text-decoration: none;
+}
+.get-butt{
+  height: 53px;
+  width: 175px;
+  background-color: #FF9900;
+  border-radius: 4px;
+  border-style: none;
+  text-align: center;
+  cursor: pointer;
+  transition: opacity 0.15s;
+}
+.get-butt:hover{
+  opacity: 0.8;
+  box-shadow:5px 5px 5px rgba(0, 0, 0, 0.15);
+}
+.get-butt:active{
+  opacity: 0.4;
+}
+.icon-watch-butt{
+ height:17px;
+ width: 20px;
+ padding-right: 8.5px;
+
+}
+.Watch-butt-header{
+  background-color: #F2F2F2;
+  width: 161px;
+  height: 23px;
+  border: none;
+  text-align: center;
+  margin-left: 30px;
+  transition: opacity 0.15s;
+}
+.Watch-butt-header:hover{
+  opacity: 0.70;
+}
+.Watch-butt-header:active{
+  opacity: .80;
+}
+.text-watch-butt{
+  width: 135px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0px;
+  color: #FF9900;
+  text-decoration-line: underline;
+}
+.img-sect-header{
+  height: 496px;
+  width: 605px;
+  margin-bottom: 89px;
+  margin-top: 149px;
+}
+.header-img{
+  height: 496px;
+  width: 605px;
 }
