--- a/style/index.css
+++ b/style/index.css
@@ -33,7 +33,6 @@ a{
 ul{
  width: fit-content;
  height: fit-content;
- margin: 0px;
  list-style: none;
  margin-left: 320.73px;
  margin-right: 29px;
@@ -207,7 +206,10 @@ header{
 .featuer{
  width: 100%;
  height: 543px;
+ display: flex;
+ flex-direction: column;
  align-items: center;
+ margin-top: 110px;
 }
 .h2{
  width: 539px;
@@ -277,8 +279,7 @@ header{
 }
 .card__text2 , .card__text3 , .card__text4{
  font-family: 'Poppins', sans-serif;
- font-size: medium;
- font-weight: 16px;
+ font-size: 16px;
  line-height: 26px;
   /* or 163% */
  color: #544837;
@@ -322,4 +323,120 @@ header{
 .button-contenaier:active{
  opacity: 0.4;
 }
+/* main section2 */
+.fourth-section{
+ max-width: 2211px;
+ width: 100%;
+ height: 543px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+.contenaier-fourth-mine{
+ max-width: 1110px;
+ width: 100%;
+ height: 574px;
+ display: flex;
+ margin-left: 206px;
+ margin-right: 84px;
+ margin-top: 114px;
+}
+.box-info{
+ max-width: 486px;
+ width: 100%;
+ height: 531px;
+ margin: 26px 0px 0px 0px;
+ padding: 0px 0px;
+ background-color: #F2F2F2;
+ display: flex;
+ flex-direction: column;
+}
+.Topic-title{
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ color: #544837;
+ width: 186px;
+ height: 24px;
+ margin: 0px 0px 0px 0px;
+}
+.title-h3{
+ font-family: 'Poppins', sans-serif;
+ font-size: 36px;
+ font-weight: bold;
+ letter-spacing: 0px;
+ color: #2F281E;
+ width: 385px;
+ height: 54px;
+ margin: 3px 0px 0px 0px;
+}
+.Description-topic{
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ color: #544837;
+ line-height: 26px;
+  /* or 163% */
+ letter-spacing: 0px;
+ width: 486px;
+ margin: 22px 0px 30px 0px;
+}
+.div1-fourth {
+ width: 486px;
+ height: 90px;
+ color: #544837;
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ line-height: 26px;
+  /* or 163% */
+ letter-spacing: 0px;
+ margin: 0px 0px 0px 0px;
+ order: 3;
+}
+.div2-fourth {
+ width: 486px;
+ height: 90px;
+ color: #544837;
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ line-height: 26px;
+  /* or 163% */
+ letter-spacing: 0px;
+ margin: 0px 0px 25px 0px;
+ order: 2;
+}
+.div3-fourth{
+ width: 486px;
+ height: 90px;
+ color: #544837;
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ line-height: 26px;
+  /* or 163% */
+ letter-spacing: 0px;
+ margin: 0px 0px 25px 0px;
+ order: 1;
+}
+.Services1 , .Services2 ,.Services3{
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ font-weight: bold;
+ line-height: 26px;
+  /* or 163% */
+ letter-spacing: 0px;
+ color: #2F281E;
+ margin: 0px 0px 0px 0px;
+}
+.advertisement1 , .advertisement2 , .advertisement3{
+ color: #544837;
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ margin: 12px 0px 0px 0px;
+}
+.div-fourth-img{
+ width: 520px;
+ height: 574px;
+ margin-left: 104px;
+}
+/* main section3 */
+
+
 
