--- a/style/index.css
+++ b/style/index.css
@@ -2,7 +2,7 @@
 body{
  background-color: #F2F2F2;
  width: 1400px;
- height: 3866px;
+ height: 3843px;
 }
 a{
  cursor: pointer;
@@ -20,7 +20,8 @@ a{
 .navbar{
  width: 1400px;
  height: 78px;
- margin-top: 23px;
+ margin-top: 20px;
+ padding: 0px 0px 0px 0px;
  display: flex;
  justify-content: space-between;
 }
@@ -111,14 +112,15 @@ li a {
  opacity: 0.4;
 }
 /* header section */
-header{
- margin: 137px;
-}
 .contenaier{
  display: flex;
  width: 1126px;
  height: 496px;
- margin: auto;
+ display: flex;
+ justify-content: center;
+ margin-top: 30px;
+ margin-left: 145px;
+ margin-right: 125px;
 }
 .left-sec-header{
  width: 518px;
@@ -297,24 +299,29 @@ header{
  order: -2;
 }
 .button-contenaier{
- background-color: #FF9900;
- max-width: 175px;
+ background-color: #4d1515;
  width: 100%;
+ height: 53px;
+ display: flex;
+ justify-content: center;
+ margin-top: 34px;
+ margin-bottom: 90px;
+}
+.card-button{
+ background-color: #FF9900;
+ width: 175px;
  height: 53px;
  color: #FFFFFF;
  font-family: 'Poppins', sans-serif;
  font-size: 16px;
  font-weight: bold;
  letter-spacing: 0px;
- line-height: auto;
  border-radius: 4px;
  border: none;
  text-align: center;
  transition: 0,15s;
  cursor: pointer;
  transition: opacity 0.15s;
- display: block;
- margin: auto;
 }
 .button-contenaier:hover{
  opacity: 0.8;
@@ -324,14 +331,7 @@ header{
  opacity: 0.4;
 }
 /* main section2 */
-.fourth-section{
- max-width: 2211px;
- width: 100%;
- height: 543px;
- display: flex;
- justify-content: center;
- align-items: center;
-}
+
 .contenaier-fourth-mine{
  max-width: 1110px;
  width: 100%;
@@ -339,7 +339,7 @@ header{
  display: flex;
  margin-left: 206px;
  margin-right: 84px;
- margin-top: 114px;
+ margin-top: 120px;
 }
 .box-info{
  max-width: 486px;
@@ -437,20 +437,15 @@ header{
  margin-left: 104px;
 }
 /* main section3 */
-.section3{
- width: 100%;
- height: 521px;
- margin-top: 107px;
- display: flex;
- justify-content: center;
-}
 .contenaier-section3{
  max-width: 1121px;
  width: 100%;
  height: 521px;
+ display: flex;
+ justify-content: center;
  margin-left: 144px;
  margin-right: 135px;
- display: flex;
+ margin-top: 101px;
 }
 .img-div-section3{
  max-width: 535px;
@@ -465,8 +460,8 @@ header{
  margin-top: 49px;
  margin-bottom: 45px;
  margin-right: 51px;
- display: inline-block;
- justify-content: flex-end;
+ display: flex;
+ flex-direction: column;
 }
 .Topic-title-section3{
  font-family: 'Poppins', sans-serif;
@@ -498,20 +493,22 @@ header{
  display: flex;
  align-items: center;
  margin-bottom: 30px;
+ order: 2;
 }
 .Description-div2-section3{
  width: 465px;
  height: 52px;
  display: flex;
- justify-content: start;
  align-items: center;
- margin-bottom: 31px;
+ order: 3;
 }
 .Description-div3-section3 {
  width: 465px;
  height: 52px;
  display: flex;
  align-items: center;
+ margin-bottom: 30px;
+ order: 1;
 }
 .icon1-section3 , .icon2-section3 , .icon3-section3{
  width: 35px;
@@ -530,18 +527,136 @@ header{
  margin: 0px 0px 0px 30px;
 }
 .text-description2-section3{
-  font-family: 'Poppins', sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 26px;
-  font-weight: 500;
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ font-weight: 500;
+ line-height: 26px;
+ font-weight: 500;
   /* or 163% */
-  color: #544837;
-  width: 385px;
-  height: 52px;
-  margin: 0px 0px 0px 30px;
+ color: #544837;
+ width: 385px;
+ height: 52px;
+ margin: 0px 0px 0px 30px;
+ order: ;
+} 
+/* main section4 */
+.contenaier-section4{
+ max-width: 1110px;
+ width: 100%;
+ height: 609px;
+ display: inline-block;
+ margin-top: 104px;
+ margin-left: 147px;
+ margin-right: 143px;
+ position: relative;
 }
+.box-first-info{
+ width: 609px;
+ height: 181px;
+ margin-top: 39px;
+ display: inline-block;
+ margin: 39px 0px 0px 0px;
+}
+.Topic-title-section4{
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ font-weight: 500;
+ color: #544837;
+ margin: 0px 0px 0px 0px;
+}
+.title-h5-section4{
+ font-family: 'Poppins', sans-serif;
+ font-size: 36px;
+ font-weight: bold;
+ color: #2F281E;
+ margin: 3px 0px 0px 0px;
+}
+.info-text-section4{
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ font-weight: 500;
+ line-height: 26px;
+ /* or 163% */
+ color: #544837;
+ width: 486px;
+ margin: 22px 0px 0px 0px;
+}
+.Description-div1-section4{
+ width: 486px;
+ height: 90px;
+ margin-top: 30px;
+}
+.Description-div2-section4{
+ width: 486px;
+ height: 90px;
+ margin-top: 25px;
+}
+.Description-div3-section4{
+ width: 486px;
+ height: 90px;
+ margin-top: 25px;
+ }
 
-
-
-
+.Services1-section4 , .Services2-section4 , .Services2-section4 {
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ font-weight: bold;
+ line-height: 26px;
+ /* or 163% */
+ color: #2F281E;
+}
+.Services1-section4{
+ width: 153px;
+ height: 26px;
+}
+.Services2-section4 {
+ width: 112px;
+ height: 26px;
+}
+.Services2-section4 {
+ width: 121px;
+ height: 26px;
+ display: inline;
+}
+.advertisement1-section4 , .advertisement2-section4 , .advertisement3-section4{
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ font-weight: 500;
+ line-height: 26px;
+ /* or 163% */
+ width: 486;
+ height: 52px;
+}
+.fourth-section4-img{
+ width: 542px;
+ height: 609px;
+ position: absolute;
+ top: 0px;
+ right: 0px;
+ }
+ /*footer*/
+ .footer-contenier{
+  background-color: #2b2620;
+  max-width: 1109px;
+  width: 100%;
+  height: 308px;
+  margin-top: 146px;
+  margin-right: 131px;
+  margin-left: 160px;
+  margin-bottom: 83px;
+  display: flex;
+ }
+ .div-logo-footer{
+ max-width: 184.35px;
+ width: 100%;
+ height: 31.87px;
+ margin-top: 101.67px;
+ }
+ .icon-footer{
+  width: 30px;
+  height: 29.9px;
+ }
+ .icon-productly-footer{
+  width: 142.35px;
+  height: 28.88px;
+ }
