--- a/style/index.css
+++ b/style/index.css
@@ -230,13 +230,19 @@ li a {
 }
 
 /*cards section*/
+.featuer{
+  max-width: 2211px;
+  width: 100%;
+  height: 543px;
+  display: flex;
+  justify-content: center;
+}
 .contenaier-featuer{
  max-width: 1095px;
  width: 100%;
  height: 204px;
  display: flex;
  justify-content:space-between;
- margin: 54px auto;
 }
 .card1{
  max-width: 240px;
@@ -260,8 +266,8 @@ li a {
  max-width: 240px;
  width: 100%;
  font-family: 'Poppins', sans-serif;
- font-size: medium;
- font-weight: 16px;
+ font-size: 16px;
+ font-weight: 500;
  color: #544837;
  line-height: 26px;
  /* or 163% */
@@ -299,13 +305,12 @@ li a {
  order: -2;
 }
 .button-contenaier{
- background-color: #4d1515;
- width: 100%;
+ width: 200px;
  height: 53px;
  display: flex;
  justify-content: center;
  margin-top: 34px;
- margin-bottom: 90px;
+
 }
 .card-button{
  background-color: #FF9900;
@@ -331,25 +336,28 @@ li a {
  opacity: 0.4;
 }
 /* main section2 */
-
-.contenaier-fourth-mine{
- max-width: 1110px;
+.contenaier-section2{
+ max-width: 2211px;
  width: 100%;
  height: 574px;
  display: flex;
- margin-left: 206px;
- margin-right: 84px;
- margin-top: 120px;
 }
-.box-info{
+.contenaier-fourth-mine{
  max-width: 486px;
  width: 100%;
  height: 531px;
- margin: 26px 0px 0px 0px;
- padding: 0px 0px;
- background-color: #F2F2F2;
  display: flex;
- flex-direction: column;
+ align-items: center;
+ margin-top: 120px;
+ margin-left: 145px;
+ margin-right: 145px;
+}
+.left-box-info{
+ max-width: 486px;
+ width: 100%;
+ height: 531px;
+ margin-top: 26px;
+ margin-bottom: 17px;
 }
 .Topic-title{
  font-family: 'Poppins', sans-serif;
@@ -553,8 +561,7 @@ li a {
 .box-first-info{
  width: 609px;
  height: 181px;
- margin-top: 39px;
- display: inline-block;
+ display: block;
  margin: 39px 0px 0px 0px;
 }
 .Topic-title-section4{
@@ -604,6 +611,7 @@ li a {
  line-height: 26px;
  /* or 163% */
  color: #2F281E;
+ margin: 0px 0px;
 }
 .Services1-section4{
  width: 153px;
@@ -624,8 +632,10 @@ li a {
  font-weight: 500;
  line-height: 26px;
  /* or 163% */
- width: 486;
+ width: 486px;
  height: 52px;
+ margin-top: 12px;
+ margin-bottom: 0px;
 }
 .fourth-section4-img{
  width: 542px;
@@ -636,7 +646,6 @@ li a {
  }
  /*footer*/
  .footer-contenier{
-  background-color: #2b2620;
   max-width: 1109px;
   width: 100%;
   height: 308px;
@@ -645,6 +654,7 @@ li a {
   margin-left: 160px;
   margin-bottom: 83px;
   display: flex;
+  justify-content: space-between;
  }
  .div-logo-footer{
  max-width: 184.35px;
@@ -660,3 +670,98 @@ li a {
   width: 142.35px;
   height: 28.88px;
  }
+ .input-div{
+  max-width: 325px;
+  width: 100%;
+  height: 198.35px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  order: 4;
+  margin-top: 101.67px;
+ }
+ .input-form{
+ width: 325px;
+ height: 47.84px;
+ margin-bottom: 20.93px;
+ border-radius: 4px;
+ border: none;
+ }
+ .input-button{
+ width: 131px;
+ height: 38.87px;
+ background-color: #FF9900;
+ font-family: 'Poppins', sans-serif;
+ font-size: 16px;
+ font-weight: bold;
+ text-align: center;
+ color: #FFFFFF;
+ border: none;
+ transition: 0,15s;
+ cursor: pointer;
+ transition: opacity 0.15s;
+}
+.input-button:hover{
+ opacity: 0.8;
+ box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
+}
+.input-button:active{
+ opacity: 0.4;
+}
+.div1-footer{
+  max-width: 132px;
+  width:100%;
+  height: 204.33px;
+  order: 3;
+  margin-top: 101.67px;
+}
+.footer-ul1{
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+ width: 132px;
+ height: 140px;
+ margin: 0px 0px 0px 0px;
+}
+footer ul li{
+  width: 132px;
+  height: 16px;
+}
+footer ul li a{
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 35px;
+   /* or 212% */
+   letter-spacing: 0px;
+}
+.div2-footer{
+  max-width: 118px;
+  width: 100%;
+  height: 204.33px; 
+  order: 2;
+  margin-top: 101.67px;
+}
+.footer-ul2{
+  width: 72px;
+  height: 140px;;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.ul2 li {
+  height: 72px;
+  width: 140px;;
+}
+.ul2 li a{
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 35px;
+   /* or 212% */
+   letter-spacing: 0px
+}
+/* end */
