--- a/style/index.css
+++ b/style/index.css
@@ -1,8 +1,9 @@
 
 body{
  background-color: #F2F2F2;
- width: 1400px;
- height: 3843px;
+ max-width: 1400px;
+ width: 100%;
+ min-height: 3843px;
 }
 a{
  cursor: pointer;
@@ -53,6 +54,13 @@ li a {
  text-decoration: none;
  padding: 0px 5px;
 }
+li a:hover{
+  opacity: 0.8;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
+ }
+ li a:active{
+  opacity: 0.4;
+ }
 .button-div{
  width: fit-content;
  height: fit-content;
@@ -545,7 +553,6 @@ li a {
  width: 385px;
  height: 52px;
  margin: 0px 0px 0px 30px;
- order: ;
 } 
 /* main section4 */
 .contenaier-section4{
@@ -735,6 +742,13 @@ footer ul li a{
    /* or 212% */
    letter-spacing: 0px;
 }
+li a:hover{
+  opacity: 0.8;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
+ }
+ li a:active{
+  opacity: 0.4;
+ }
 .div2-footer{
   max-width: 118px;
   width: 100%;
@@ -764,4 +778,11 @@ footer ul li a{
    /* or 212% */
    letter-spacing: 0px
 }
+li a:hover{
+  opacity: 0.8;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
+ }
+ li a:active{
+  opacity: 0.4;
+ }
 /* end */
